# rust-file-downloader-with-encryption

./: .gitignore  Cargo.toml  README.md
src/: downloader.rs  encryption.rs  errorHandler.rs  main.rs
