[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
error-chain = "0.12.4"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
tokio = { version = "1.21.1", features = ["full"] }
regex = "1.10.4"
serde_json = "1.0"
indicatif = "0.17.8"
tokio-util = "0.7.10"
futures-util = "0.3.30"
bytes = "1.6.0"
num = "0.4.2"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
rand = "0.8"
anyhow = "1.0"